--- a/tests/example-all-fail-melange/.gitignore
+++ b/tests/example-all-fail-melange/.gitignore
@@ -32,5 +32,7 @@ setup.log
 # Local OPAM switch
 _opam/
 
-# End of https://www.toptal.com/developers/gitignore/api/ocaml
+# Esy
+_esy
 
+# End of https://www.toptal.com/developers/gitignore/api/ocaml
